# sskeleton

./: README  configure.ac  sskeleton.sln  sskeleton.vcxproj
src/: AngleAccumulator.cpp  AngleAccumulator.h  Cache.h  Chain.cpp  Chain.h  CoSitedCollision.cpp  CoSitedCollision.h  CollisionQ.cpp  CollisionQ.h  ConsecutivePairs.h  ConsecutiveTriples.h  Corner.cpp  Corner.h  CornerClone.cpp  CornerClone.h  DHash.h  Defines.h  DirectionHeightEvent.cpp  DirectionHeightEvent.h  Edge.cpp  Edge.h  EdgeCollision.cpp  EdgeCollision.h  Feature.cpp  Feature.h  GC.cpp  GC.h  GraphMap.h  HeightCollision.cpp  HeightCollision.h  HeightEvent.h  IdentityLookup.h  Iterator.h  Line3D.cpp  Line3D.h  LineOnPlane.h  LinearForm3D.cpp  LinearForm3D.h  LinkedHashContainer.h  Loop.h  (+22 more)
