#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT([sskeleton], [0.1], [tom@cornall.co])
AC_CONFIG_SRCDIR([src/sskeleton.cpp])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE
AM_SILENT_RULES([yes])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.
#AC_SEARCH_LIBS([floor], [m])
#AC_SEARCH_LIBS([post_menu], [menu])
#AC_SEARCH_LIBS([initscr], [ncursesw])
#PKG_CHECK_MODULES([json], [json >= 0.9])
#PKG_CHECK_MODULES([libcurl], [libcurl >= 7.19.7])
#PKG_CHECK_MODULES([oauth], [oauth >= 0.9.6])

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
