bin_PROGRAMS = sskeleton
sskeleton_SOURCES = sskeleton.cpp \
					sskeleton_dll.cpp sskeleton_dll.h \
					AngleAccumulator.cpp AngleAccumulator.h \
					Cache.h \
					Chain.cpp Chain.h \
					CoSitedCollision.cpp CoSitedCollision.h \
					CollisionQ.cpp CollisionQ.h \
					ConsecutivePairs.h \
					ConsecutiveTriples.h \
					Corner.cpp Corner.h \
					CornerClone.cpp CornerClone.h \
					Defines.h \
					DHash.h \
					DirectionHeightEvent.cpp DirectionHeightEvent.h \
					Edge.cpp Edge.h \
					EdgeCollision.cpp EdgeCollision.h \
					Feature.cpp Feature.h \
					GC.cpp GC.h \
					GraphMap.h \
					HeightCollision.cpp HeightCollision.h \
					HeightEvent.h \
					IdentityLookup.h \
					Iterator.h \
					Line3D.cpp Line3D.h \
					LineOnPlane.h \
					LinearForm3D.cpp LinearForm3D.h \
					LinkedHashContainer.h \
					Loop.h \
					Machine.cpp Machine.h \
					ManyManyMap.h \
					MultiHashMap.h \
					Output.cpp Output.h \
					Point3D.cpp Point3D.h \
					SetCorrespondence.h \
					Skeleton.cpp Skeleton.h \
					SkeletonCapUpdate.cpp SkeletonCapUpdate.h \
					Tuple3D.cpp Tuple3D.h \
					Vector3D.cpp Vector3D.h

AM_CPPFLAGS = -Wall -g -rdynamic \
			  -I /usr/include/tnt \
			  #-D_GLIBCXX_DEBUG
